Add button for Calculadora navigation

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <nav class="nav">
         <button onclick="window.location.href='./src/DIV-Erik.html'" class="button">Tablas</button>
         <button onclick="window.location.href='./src/Ejercicios-DIV.html'" class="button">Bolitas</button>
+        <button onclick="window.location.href='./src/calculadora/index.html'" class="button">Calculadora</button>
     </nav>
     <div class="contenedor">
         <aside class="aside">
