--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Erik">
     <meta name="Description" content="Ejercicios de 2ºSMR">
-    <meta name="Keywords" content="HTML, CSS, JavaScript, SQL, PHP, jQuery, XML, DOM, Bootstrap, Python, educación, Ciclo, Grado Medio, Informática">
-    <link rel="shortcut icon" href="./src/SMR.jpg"  type="image/x-icon">
+    <meta name="Keywords" content="HTML, CSS, JavaScript, SQL, PHP, jQuery, XML, DOM, Bootstrap, Python">
+    <link rel="shortcut icon" href="./../SMR.jpg"  type="image/x-icon">
     <title>2ºSMR</title>
     <style>
         body {
@@ -64,18 +64,41 @@
             flex-direction: column;
         }
     </style>
+    <!-- Para WhatsApp -->
+    <meta property="og:title" content="Mi Página Web con GitHub Pages">
+    <meta property="og:description" content="Descubre contenido interesante, recursos útiles y mucho más.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://erikcn47.github.io/">
+    <meta property="og:image" content="https://github.com/erikcn47/erikcn47.github.io/blob/main/src/SMR.jpg">
+    <meta property="og:site_name" content="Mi Página Web">
+    <!-- ---------------- -->
+
+    <!-- Para X (Twitter) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Mi Página Web con GitHub Pages">
+    <meta name="twitter:description" content="Descubre contenido interesante, recursos útiles y mucho más.">
+    <meta name="twitter:image" content="https://github.com/erikcn47/erikcn47.github.io/blob/main/src/SMR.jpg">
+    <meta name="twitter:url" content="https://erikcn47.github.io/">
+    <!-- ---------------- -->
+    <!-- Telegram -->
+    <meta property="og:title" content="Mi Página Web con GitHub Pages">
+    <meta property="og:description" content="Descubre contenido interesante, recursos útiles y mucho más.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://erikcn47.github.io/">
+    <meta property="og:image" content="https://github.com/erikcn47/erikcn47.github.io/blob/main/src/SMR.jpg">
+    <meta property="og:site_name" content="Mi Página Web">
+    <!-- -------------- -->
 </head>
 <body>
     <header class="header">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRx8aFva9uxUL7wTVqSgB8ZiPFEy6yENBBbA&s" alt="Logo Educarex">
-        <h1>Ejercicios de 2ºSMR</h1>
+        <h1>Ejercicios 2ºSMR</h1>
     </header>
     <nav class="nav">
-        <button onclick="window.location.href='./src/DIV-Erik.html'" class="button button-container">Tablas</button>
-        <button onclick="window.location.href='./src/Ejercicios-DIV.html'" class="button button-container">Bolitas</button>
-        <button onclick="window.location.href='./src/calculadora/index.html'" class="button button-container">Calculadora</button>
-        <button onclick="window.location.href='./src/Mapa-De-Uso.html'" class="button button-container">Mapa de Uso</button>
-        <button onclick="window.location.href='./git.html'" class="button button-container">GIT</button>
+        <button onclick="window.location.href='./DIV-Erik.html'" class="button button-container">Tablas</button>
+        <button onclick="window.location.href='./Ejercicios-DIV.html'" class="button button-container">Bolitas</button>
+        <button onclick="window.location.href='./calculadora/index.html'" class="button button-container">Calculadora</button>
+        <button onclick="window.location.href='./Mapa-De-Uso.html'" class="button button-container">Mapa de Uso</button>
     </nav>
     <div class="contenedor">
         <aside class="aside">
@@ -88,19 +111,25 @@
             <h1>Inicio</h1>
             <details>
                 <summary><strong>Instrucciones</strong></summary>
-                <p>En esta página encontrarás una breve explicación sobre qué es el Grado Medio de Sistemas Microinformáticos y Redes (SMR) y que es SEO y sus características. Lee atentamente el contenido para entender mejor esta formación profesional.</p>
+                <p>
+                    En esta página encontrarás una breve explicación sobre qué es el Grado Medio de Sistemas Microinformáticos y Redes (SMR) y que es SEO y sus características. Lee atentamente el contenido para entender mejor esta formación profesional.
+                </p>
             </details><br>
             <details>
                 <summary><strong>Qué es un Grado Medio de SMR</strong></summary>
-                <p>Un Grado Medio de Sistemas Microinformáticos y Redes (SMR) es una formación profesional que enseña a los estudiantes a instalar, configurar y mantener equipos informáticos, redes locales y servicios básicos de internet. Durante el curso, se aprenden conocimientos de hardware, sistemas operativos (como Windows y Linux), seguridad informática y atención al usuario.<br><br>
+                <p>
+                    Un Grado Medio de Sistemas Microinformáticos y Redes (SMR) es una formación profesional que enseña a los estudiantes a instalar, configurar y mantener equipos informáticos, redes locales y servicios básicos de internet. Durante el curso, se aprenden conocimientos de hardware, sistemas operativos (como Windows y Linux), seguridad informática y atención al usuario.<br><br>
 
-                Este ciclo tiene una duración de dos años, combinando clases teóricas con prácticas en empresas del sector, lo que ayuda a adquirir experiencia real. Al terminar, se obtiene el título de Técnico en Sistemas Microinformáticos y Redes, que permite trabajar en puestos como técnico de soporte informático, instalador de redes o mantenimiento de equipos.<br><br>
+                    Este ciclo tiene una duración de dos años, combinando clases teóricas con prácticas en empresas del sector, lo que ayuda a adquirir experiencia real. Al terminar, se obtiene el título de Técnico en Sistemas Microinformáticos y Redes, que permite trabajar en puestos como técnico de soporte informático, instalador de redes o mantenimiento de equipos.<br><br>
 
-                También sirve como base para seguir estudiando un Grado Superior de Informática, por lo que es una buena opción para quienes quieren empezar una carrera en el mundo de la tecnología y la informática.</p>
+                    También sirve como base para seguir estudiando un Grado Superior de Informática, por lo que es una buena opción para quienes quieren empezar una carrera en el mundo de la tecnología y la informática.
+                </p>
             </details><br>
             <details>
                 <summary><strong>Qué es SEO</strong></summary>
-                <p>SEO son las siglas de Search Engine Optimization (Optimización para Motores de Búsqueda), que se refiere al conjunto de técnicas para mejorar la visibilidad y el posicionamiento de un sitio web en los resultados orgánicos (no pagados) de los motores de búsqueda como Google. Su objetivo es que un sitio aparezca en las primeras posiciones para las búsquedas de los usuarios, atrayendo así más tráfico cualificado a largo plazo. </p>
+                <p>
+                    SEO son las siglas de Search Engine Optimization (Optimización para Motores de Búsqueda), que se refiere al conjunto de técnicas para mejorar la visibilidad y el posicionamiento de un sitio web en los resultados orgánicos (no pagados) de los motores de búsqueda como Google. Su objetivo es que un sitio aparezca en las primeras posiciones para las búsquedas de los usuarios, atrayendo así más tráfico cualificado a largo plazo.
+                </p>
             </details><br>
             <details>
                 <summary><strong>Características de SEO</strong></summary>
