--- a/git.html
+++ b/git.html
@@ -18,6 +18,30 @@
             background: linear-gradient(to left, yellow, orange);
         }
     </style>
+    <!-- Para WhatsApp -->
+    <meta property="og:title" content="GIT">
+    <meta property="og:description" content="Descubre contenido interesante, recursos útiles y mucho más.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://erikcn47.github.io/">
+    <meta property="og:image" content="https://raw.githubusercontent.com/erikcn47/erikcn47.github.io/refs/heads/main/src/SMR.jpg">
+    <meta property="og:site_name" content="Mi Página Web">
+    <!-- ---------------- -->
+
+    <!-- Para X (Twitter) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="GIT">
+    <meta name="twitter:description" content="Descubre contenido interesante, recursos útiles y mucho más.">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/erikcn47/erikcn47.github.io/refs/heads/main/src/SMR.jpg">
+    <meta name="twitter:url" content="https://erikcn47.github.io/">
+    <!-- ---------------- -->
+    <!-- Telegram -->
+    <meta property="og:title" content="GIT">
+    <meta property="og:description" content="Descubre contenido interesante, recursos útiles y mucho más.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://erikcn47.github.io/">
+    <meta property="og:image" content="https://raw.githubusercontent.com/erikcn47/erikcn47.github.io/refs/heads/main/src/SMR.jpg">
+    <meta property="og:site_name" content="Mi Página Web">
+    <!-- -------------- -->
 </head>
 <body>
     <p>
