--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Author" content="Erik">
     <meta name="Description" content="Ejercicios de 2ºSMR">
     <meta name="Keywords" content="HTML, CSS, JavaScript, SQL, PHP, jQuery, XML, DOM, Bootstrap, Python">
-    <link rel="shortcut icon" href="./../SMR.jpg"  type="image/x-icon">
+    <link rel="shortcut icon" href="./src/SMR.jpg"  type="image/x-icon">
     <title>2ºSMR</title>
     <style>
         body {
