--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
     </div>
     <footer class="footer">
         <p>2025/26 2ºSMR</p>
+        <button class="button" type="button" onclick="document.getElementById('hora').innerHTML = Date();">Mostrar Hora</button>
+        <p id="hora"></p>
     </footer>
 </body>
 </html>
