--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <button onclick="window.location.href='./html/MIPRIMERAWEB/mi-primera-web.html'" class="button">MiPrimeraWeb</button>
         <button onclick="window.location.href='./html/MULTIMEDIA/multimedia.html'" class="button">Multimedia</button>
         <button onclick="window.location.href='./html/POSICIONES/posiciones.html'" class="button">Posiciones</button>
+        <button onclick="window.location.href='./html/REDES_SOCIALES/index.html'" class="button">Inteligencia Artificial</button>
     </nav>                                                                                                                                                                                                                                                                                                                                              
     <div class="contenedor">
         <aside class="aside">
