add wikipedia info

--- a/html/REDES_SOCIALES/index.html
+++ b/html/REDES_SOCIALES/index.html
@@ -53,10 +53,10 @@
     </header>
     <div class="div">
         <aside class="aside">
-            <a href="#" onclick="cambiarIA('https://chatgpt.com/'); return false;">CHATGPT</a><br>
-            <a href="#" onclick="cambiarIA('https://grok.com/'); return false;">GROK</a><br>
-            <a href="#" onclick="cambiarIA('https://chat.qwen.ai/'); return false;">QWEN</a><br>
-            <a href="#" onclick="cambiarIA('https://gemini.google.com/'); return false;">GEMINI</a>
+            <a href="#" onclick="cambiarIA('https://es.wikipedia.org/wiki/ChatGPT'); return false;">CHATGPT</a><br>
+            <a href="#" onclick="cambiarIA('https://es.wikipedia.org/wiki/Grok_(chatbot)'); return false;">GROK</a><br>
+            <a href="#" onclick="cambiarIA('https://es.wikipedia.org/wiki/Qwen'); return false;">QWEN</a><br>
+            <a href="#" onclick="cambiarIA('https://es.wikipedia.org/wiki/Gemini_(bot_conversacional)'); return false;">GEMINI</a>
         </aside>
         <main>
             <h2 class="titulo">Diferentes IAs</h2>
