--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <button onclick="window.location.href='./html/MULTIMEDIA/multimedia.html'" class="button">Multimedia</button>
         <button onclick="window.location.href='./html/POSICIONES/posiciones.html'" class="button">Posiciones</button>
         <button onclick="window.location.href='./html/REDES_SOCIALES/index.html'" class="button">Inteligencia Artificial</button>
+        <button onclick="window.location.href='./JavaScript/index.html'" class="button">JavaScript</button>
     </nav>                                                                                                                                                                                                                                                                                                                                              
     <div class="contenedor">
         <aside class="aside">
