--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicios JavaScript</title>
     <style>
-        #aparecer {
+        #aparecer, #sol {
             display: none;
         }
     </style>
