--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -7,7 +7,7 @@
     <meta name="Author" content="Erik">
     <meta name="Description" content="Ejercicios de 2ºSMR">
     <meta name="Keywords" content="HTML, CSS, JavaScript, SQL, PHP, jQuery, XML, DOM, Bootstrap, Python">
-    <link rel="shortcut icon" href="./img/SMR.jpg"  type="image/x-icon">
+    <link rel="shortcut icon" href="./img/JavaScript.png"  type="image/x-icon">
     <link rel="stylesheet" href="./css/js.css">
 
     <!-- Para WhatsApp y Telegram -->
