--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <details name="grupo">
                 <summary><strong>Instrucciones</strong></summary>
                 <p>
-                    En esta página encontrarás una breve explicación sobre qué es el Grado Medio de Sistemas Microinformáticos y Redes (SMR) y que es SEO y sus características. Lee atentamente el contenido para entender mejor esta formación profesional.
+                    En esta página encontrarás una breve explicación sobre qué es el Grado Medio de Sistemas Microinformáticos y Redes (SMR), tareas realizadas en clase y qué es SEO y sus características. Lee atentamente el contenido para entender mejor esta formación profesional.
                 </p>
             </details><br>
             <details name="grupo">
