--- a/html/FORMULARIO/formulario.html
+++ b/html/FORMULARIO/formulario.html
@@ -78,10 +78,10 @@
             event.preventDefault();
 
             const nombre = document.getElementById('nombre').value;
-            alert('Nombre: ' + nombre);
-
             const email = document.getElementById('email').value;
-            alert('Email: ' + email);
+            alert('Nombre: ' + nombre + ' ' + 'Email: ' + email);
+
+            
         });
     </script>
 </body>
