--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+Aquí tienes el HTML actualizado con los cambios que has pedido:
+
+He eliminado el bloque de "Landing Page".
+
+He cambiado el nombre de "Proyecto 1" por "Tareas".
+
+HTML
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -47,7 +55,6 @@
             object-fit: cover;
             border: 4px solid #333;
             margin-bottom: 1rem;
-            /* Se asegura de que se vea como bloque para respetar márgenes */
             display: inline-block; 
         }
 
@@ -162,7 +169,7 @@
             <div class="projects-grid">
                 
                 <a href="proyecto1/index.html" class="project-card">
-                    <i class="fas fa-folder"></i> Proyecto 1
+                    <i class="fas fa-folder"></i> Tareas
                 </a>
 
                 <a href="calculadora/index.html" class="project-card">
@@ -173,11 +180,7 @@
                     <i class="fas fa-file-alt"></i> Formulario
                 </a>
 
-                <a href="landing/index.html" class="project-card">
-                    <i class="fas fa-desktop"></i> Landing Page
-                </a>
-
-            </div>
+                </div>
         </div>
 
         <div class="map-container">
@@ -193,9 +196,9 @@
         </div>
 
         <div class="social-links">
-            <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://es.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="mailto:blopezj05@educarex.es"><i class="fas fa-envelope"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:tu@email.com"><i class="fas fa-envelope"></i></a>
         </div>
 
         <div class="skills-icons">
