Fix link case sensitivity in project card

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <h3>Mis Trabajos</h3>
             <div class="projects-grid">
                 
-                <a href="Tareas/index.html" class="project-card">
+                <a href="tareas/index.html" class="project-card">
                     <i class="fas fa-folder"></i> Tareas
                 </a>
 
@@ -200,6 +200,9 @@
         </div>
 
     </main>
+
+</body>
+</html>
 
 </body>
 </html>
