--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <i class="fas fa-calculator"></i> Calculadora
                 </a>
 
-                <a href="formulario/index.html" class="project-card">
+                <a href="tareas/formulario.html" class="project-card">
                     <i class="fas fa-file-alt"></i> Formulario
                 </a>
 
@@ -200,9 +200,6 @@
         </div>
 
     </main>
-
-</body>
-</html>
 
 </body>
 </html>
