--- a/index.html
+++ b/index.html
@@ -30,13 +30,29 @@
             box-sizing: border-box;
         }
 
+        /* --- DEFINICIÓN DE LA ANIMACIÓN DE LUZ LED --- */
+        @keyframes parpadeo-led {
+            0% {
+                /* Estado inicial: borde negro */
+                box-shadow: 0 0 5px #000000, 0 0 10px #000000, 0 0 20px #000000;
+                border-color: #000000;
+            }
+            100% {
+                /* Estado final: borde blanco brillante */
+                box-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff, 0 0 40px #ffffff;
+                border-color: #ffffff;
+            }
+        }
+
         .profile-card {
             background-color: var(--card-color);
             padding: 2rem;
             border-radius: 20px;
             text-align: center;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.5);
-            max-width: 600px; /* Un poco más ancho para que quepan bien los 3 botones */
+            /* Se añade un borde inicial y la animación */
+            border: 3px solid #ffffff; /* Grosor del borde */
+            animation: parpadeo-led 1s infinite alternate; /* Animación de 1s, infinita y alterna */
+            max-width: 600px;
             width: 100%;
         }
 
@@ -70,7 +86,6 @@
 
         .projects-grid {
             display: grid;
-            /* CAMBIO AQUÍ: Ahora son 3 columnas iguales para que quepan en una fila */
             grid-template-columns: repeat(3, 1fr);
             gap: 10px;
         }
@@ -85,10 +100,10 @@
             transition: all 0.3s ease;
             display: flex;
             align-items: center;
-            justify-content: center; /* Centrado para que se vean mejor en botones más pequeños */
+            justify-content: center;
             gap: 8px;
             border: 1px solid transparent;
-            font-size: 0.9rem; /* Un poco más pequeño para asegurar que cabe */
+            font-size: 0.9rem;
         }
 
         .project-card:hover {
@@ -139,7 +154,7 @@
         .skills-icons { font-size: 2rem; color: #555; display: flex; justify-content: center; gap: 15px; margin-top: 1rem; }
         .skills-icons i:hover { color: var(--accent-color); }
 
-        /* Ajuste para móviles: si la pantalla es muy pequeña, vuelven a 1 columna */
+        /* Ajuste para móviles */
         @media (max-width: 500px) {
             .projects-grid { grid-template-columns: 1fr; }
         }
@@ -209,7 +224,5 @@
 
     </main>
 
-</body>
-</html>
 </body>
 </html>
